--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/usuarioDB
 spring.datasource.username=postgres
 spring.datasource.password=123
+
+server.port=3080
+spring.application.name=user
