--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/usuarioDB
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=postgres12
 
 server.port=3080
-spring.application.name=user
+
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+spring.application.name=USERS
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.hostname=localhost
